--- a/templates/movies.html
+++ b/templates/movies.html
@@ -11,25 +11,47 @@
 <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"></link>
 </head>
 <body>
-  <h1>Movies@Mariana Tek</h1>
 
-  <div class="row">
-    <div class="filter-section col">
-      <label for="genre-filter">Filter by Genre:</label>
-      <select id="genre-filter" class="form-select form-select-sm" aria-label=".form-select-sm example" multiple>
-        <!-- Genre options will be dynamically populated here -->
-      </select>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" href="#">The Movies@Mariana</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Movies</a></li>
+        </ul>
+      </div>
     </div>
-
-    <div class="search-section col">
-      <label for="title-search">Search by Title:</label>
-      <input type="text" id="title-search">
-    </div>
-
-  </div>
+  </nav>
   
 
-  <div id="movies-list">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="input-group">
+          <label for="genre-filter" class="input-group-text">Filter by Genre:</label>
+          <select id="genre-filter" class="form-select" aria-label="Filter by Genre" multiple>
+            <!-- Genre options will be dynamically populated here -->
+          </select>
+        </div>
+      </div>
+      <div class="col">
+        <div class="input-group">
+          <label for="title-search" class="input-group-text">Search by Title:</label>
+          <input type="text" id="title-search" class="form-control">
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+ <div id="movies-list">
     <div class="movie-card">
         <img src=""/>
         <h2>Title</h2>
